noinst_LIBRARIES = libyucode-restful.a

INCLUDES = @LIBBOOST_CPPFLAGS@ -I$(top_srcdir)/lib

libyucode_restful_a_SOURCES = ServiceRestFul.cpp controller/RestFulController.cpp controller/SecurityController.cpp controller/FacebookController.cpp
libyucode_restful_a_CPPFLAGS = @LIBBOOST_CPPFLAGS@ @MYSQL_CPPFLAGS@ 
