noinst_LIBRARIES = libyucode-restfulgame.a

INCLUDES = @LIBBOOST_CPPFLAGS@ -I$(top_srcdir)/lib

libyucode_restfulgame_a_SOURCES = ServiceRestFulGame.cpp controller/GameController.cpp controller/GameAlgorithm.cpp controller/GameBotsDaemon.cpp transportdata/model/Cell.cpp transportdata/model/Game.cpp transportdata/model/User.cpp transportdata/model/Player.cpp 
libyucode_restfulgame_a_CPPFLAGS = @LIBBOOST_CPPFLAGS@ @MYSQL_CPPFLAGS@ 
